--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"start": "node ./server.js"
 	},
 	"dependencies": {
-		"express": "^4.21.2"
+		"express": "^4.21.2",
+		"winston": "^3.17.0"
 	},
 	"type": "module",
 	"devDependencies": {
