--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"start": "node ./server.js"
+		"start": "node ./src/server.js",
+		"test": "node --test --test-coverage"
 	},
 	"dependencies": {
 		"express": "^4.21.2",
