fix: revert network config
Of course none of the networking stuff from the last commit worked.
Still have not found any option that forces a static ip address. Which
is odd, because shouldn't that be like the easiest thing to do?

Also, dug myself a hole by not making things backwards compatible or
leaving the earlier version endpoints alone. Also, huge hole from
ignoring tests this whole time, time to fix that. In my defense, I could
argue that I've been prototyping this whole time. Perhaps the reason
nothing I try works is because I'm doing something/everything
fundamentally wrong, which might make this server worthless in the end.
That's my excuse and I'm sticking to it.

Also ai code agents suck. At first, it's like wow, then the cracks
slowly surface and I feel like I haven't been able to get codex to do
anything useful in a while. It's good at scripting, I guess. Everything
else it goes absolutely bonkers often enough to cause problems.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"start": "node ./src/server.js",
-		"test": "node --test --test-coverage"
+		"test": "node --test --experimental-test-coverage --test-coverage-branches=50 --test-coverage-functions=80 --test-coverage-lines=80"
 	},
 	"dependencies": {
 		"express": "^4.21.2",
